--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,7 @@
 <header class="jumbotron" style="text-align: center;">
   <h1>Welcome to the Dog Blog</h1>
+  {{#link-to "about"}}About{{/link-to}} | {{#link-to "index"}}Home{{/link-to}} | {{#link-to "index"}}Contact Us{{/link-to}}
 </header>
 <div class="container">
   {{outlet}}
 </div>
-<footer style="text-align: center;">
-  Contact Us | Home
-</footer>
