add functionality to add and save new post

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron" style="text-align: center;">
-  <h1>Welcome to the Dog Blog</h1>
-  {{#link-to "about"}}About{{/link-to}} | {{#link-to "index"}}Home{{/link-to}} | {{#link-to "index"}}Contact Us{{/link-to}}
+  <h1>Dog Blog</h1>
+  {{#link-to "about"}}About{{/link-to}} | {{#link-to "index"}}Home{{/link-to}} | {{#link-to "contact"}}Contact Us{{/link-to}}
 </header>
 <div class="container">
   {{outlet}}
