add functionality to index file to delete a blog post

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,5 +9,7 @@ We hope lorem ipsum kitty puppy.
   <p>{{post.date}}</p>
   <img src={{post.image}}/>
   <p>{{post.body}}</p>
+
+  <button class = "btn btn-default" {{action 'deletePost' post}}>Delete Post</button>
   <hr>
 {{/each}}
