--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -3,24 +3,24 @@
     <form>
       <div class="form-group">
         <label for="title">Title:</label>
-        {{input value=title id="title"}}
+        {{input class="form-control" value=title id="title"}}
       </div>
       <div class="form-group">
         <label for="date">Date:</label>
-        {{input type="date" value=date id="date"}}
+        {{input class="form-control" type="date" value=date id="date"}}
       </div>
       <div class="form-group">
         <label for="image">Image URL:</label>
-        {{input value=image id="image"}}
+        {{input class="form-control" value=image id="image"}}
       </div>
       <div class="form-group">
         <label for="body">Body:</label>
-        {{input value=body id="body"}}
+        {{textarea class="form-control" value=body id="body"}}
       </div>
 
-      <button {{action 'savePost'}}>Save Blog Post</button>
+      <button class="btn btn-default" {{action 'savePost'}}>Save Blog Post</button>
     </form>
   </div>
 {{else}}
-  <button {{action 'postFormShow'}}>Add New Blog Post</button>
+  <button class = "btn btn-default" {{action 'postFormShow'}}>Add New Blog Post</button>
 {{/if}}
