--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -1,4 +1,4 @@
-{{#if addNewPost}}
+<h2> Add a New Post Below </h2>
   <div>
     <form>
       <div class="form-group">
@@ -21,6 +21,3 @@
       <button class="btn btn-default" {{action 'savePost'}}>Save Blog Post</button>
     </form>
   </div>
-{{else}}
-  <button class = "btn btn-default" {{action 'postFormShow'}}>Add New Blog Post</button>
-{{/if}}
