--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -1,1 +1,22 @@
-{{yield}}
+{{#if addNewComment}}
+  <h5>New Comment</h5>
+  <div>
+    <form>
+      <div class="form-group">
+        <label for="author">Author:</label>
+        {{input class="form-control" value=author id="author"}}
+      </div>
+      <div class="form-group">
+        <label for="date">Date:</label>
+        {{input type="date" class="form-control" value=date id="date"}}
+      </div>
+      <div class="form-group">
+        <label for="content">Comment:</label>
+        {{textarea class="form-control" value=content id="content"}}
+      </div>
+      <button class="btn btn-default"{{action 'saveComment'}}>Post</button>
+    </form>
+  </div>
+{{else}}
+  <button class="btn btn-default"{{action 'commentFormShow'}}>New Comment</button>
+{{/if}}
