add functionality to delete a comment and update functionality for deleting a post to delete all comments associated with that post first

--- a/app/templates/components/post-detail.hbs
+++ b/app/templates/components/post-detail.hbs
@@ -15,5 +15,7 @@
     <li><p>{{comment.content}}</p> <h5> - by {{comment.author}} on {{comment.date}}</h5>
 
     {{update-comment comment=comment updateComment="updateComment"}}</li>
+
+    <button class = "btn btn-default" {{action 'deleteComment' comment}}>Delete Comment</button>
   {{/each}}
 </ul>
