--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,1 +1,1 @@
-{{post-detail post=model destroyPost="destroyPost" updatePost="updatePost" saveComment="saveComment" updateComment="updateComment"}}
+{{post-detail post=model destroyPost="destroyPost" updatePost="updatePost" saveComment="saveComment" updateComment="updateComment" destroyComment="destroyComment"}}
