--- a/app/templates/components/post-detail.hbs
+++ b/app/templates/components/post-detail.hbs
@@ -12,7 +12,7 @@
 <h4>Comments</h4>
 <ul>
   {{#each post.comments as |comment|}}
-    <li><p>{{comment.content}}</p> <h5> - by {{comment.author}} on {{comment.date}}</h5>
+    <li><p>{{comment.content}}</p> <h5> - by {{comment.author}} on {{comment.date}} | {{comment.post.title}}</h5>
 
     {{update-comment comment=comment updateComment="updateComment"}}</li>
 
